--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,61 +1,51 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
-
 android {
-    compileSdkVersion 29
+    namespace 'myapp.schedule.misha.myapplication'
+    compileSdk 34
+    buildToolsVersion = '35.0.0 rc1'
+
     defaultConfig {
         applicationId "myapp.schedule.misha.myapplication"
-        minSdkVersion 24
-        targetSdkVersion 29
+        minSdk 24
+        targetSdk 34
         versionCode 1
-        versionName '0.0.2'
-
-        buildConfigField("String", "BASE_URL", "\"\"")
+        versionName '1.0.5'
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled = true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    buildToolsVersion = '29.0.2'
     compileOptions {
-        sourceCompatibility = "1.8"
-        targetCompatibility = '1.8'
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
-    buildToolsVersion '29.0.2'
 }
 
 dependencies {
-
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
-
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.20'
     implementation 'android.arch.persistence.room:runtime:1.1.1'
-    implementation 'androidx.browser:browser:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha10'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'org.jetbrains:annotations:17.0.0'
-    implementation 'com.github.stfalcon:androidmvvmhelper:0.4'
-    implementation 'com.google.code.gson:gson:2.8.5'
-
-    implementation 'androidx.preference:preference:1.1.0'
     kapt "android.arch.persistence.room:compiler:1.1.1"
+
+    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'org.jetbrains:annotations:24.1.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    implementation 'androidx.preference:preference-ktx:1.2.1'
     implementation "android.arch.lifecycle:extensions:1.1.1"
-    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    implementation 'org.jetbrains:annotations:17.0.0'
-}
-repositories {
-    mavenCentral()
 }
