--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,10 @@ android {
         applicationId "myapp.schedule.misha.myapplication"
         minSdk 24
         targetSdk 34
-        versionCode 1
-        versionName '1.0.5'
-        vectorDrawables.useSupportLibrary = true
+        versionCode 15
+        versionName '1.0.15'
     }
+
     buildTypes {
         release {
             minifyEnabled = true
@@ -28,24 +28,13 @@ android {
 }
 
 dependencies {
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.20'
-    implementation 'android.arch.persistence.room:runtime:1.1.1'
-    kapt "android.arch.persistence.room:compiler:1.1.1"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.23'
+    implementation("androidx.core:core-splashscreen:1.0.1")
 
     implementation 'com.google.android.material:material:1.11.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.code.gson:gson:2.10.1'
-    implementation 'org.jetbrains:annotations:24.1.0'
-
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-
     implementation 'androidx.preference:preference-ktx:1.2.1'
-    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 }
