--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.9.20'
+    ext.kotlin_version = '1.9.23'
 
     repositories {
         google()
         mavenCentral()
-        maven {url 'https://maven.google.com'}
-        maven { url "https://jitpack.io" }
+        maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.3.0'
-        classpath 'com.google.gms:google-services:4.4.1'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.20'
+        classpath 'com.android.tools.build:gradle:8.4.0-alpha13'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.23'
     }
 }
 
@@ -20,13 +18,12 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        maven {url 'https://maven.google.com'}
-        maven { url "https://jitpack.io" }
+        maven { url 'https://maven.google.com' }
     }
 }
 
 tasks.register('clean', Delete) {
-    delete rootProject.buildDir
+    delete rootProject.layout.buildDirectory
 }
 
 tasks.withType(Test).configureEach {
